syntax = "proto3";

package com.yuanchenxi95.model.stored;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.yuanchenxi95.twig.protobuf.stored";
option java_outer_classname = "StoredTagProto";

message StoredTag {
    string id = 1;
    string tag_name = 2;
    google.protobuf.Timestamp create_time = 3;
}
